--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
     <h1> Affects of Anesthesia on Blood Loss</h1>
     <script src="main.js" type="module"></script>
+
 </body>
 
 </html>
