--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <body>
     <h1> Affects of Anesthesia on Blood Loss</h1>
     <script src="main.js" type="module"></script>
+    <script type="module" src="animation.js"></script>
+
 
 </body>
 
